[package]
name = "shiftr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png", "tiff", "webp"] }
lopdf = "0.41.0"
num_cpus = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4"
tauri-plugin-opener = "2.5"
thiserror = "2.0"
tokio = { version = "1.48", features = ["process", "sync", "time", "io-util"] }
uuid = { version = "1.19", features = ["v4", "serde"] }

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
